# vidb

./: .coverage  .gitignore  .vimspector.json.disabled  README.md  myscript.py  pyproject.toml  test-report.xml
foo/: kustomization.yaml
tests/: conftest.py  stubs.py  test_connection.py  test_dap_initialize.py  test_dap_stacktrace.py  test_dap_threads.py  test_dap_variables.py  test_remote_call.py
vidb/: __main__.py  client.py  connection.py  dap.py  debugger.py  ui.py
