[tool.poetry]
name = "vidb"
version = "0.1.0"
description = ""
authors = ["Lie Ryan <lie.1296@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = ">=2.0.0,<2.1.0"
ptterm = "^0.2"
ipython = "<8.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
